<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triangulation Device</string>
    <string name="app_name_caps">TRIANGULATION DEVICE</string>
    
    <string name="my_device">MY DEVICE</string>
    <string name="paired_device">PAIRED DEVICE</string>
    <string name="longitude">LONGITUDE:</string>
    <string name="latitude">LATITUDE:</string>
    
    <string name="status">STATUS:</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="find_nearby_devices">Find Nearby Devices</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="paired_with_x" formatted="false">Paired with %s</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connect_prompt_title">Connection Request</string>
    <string name="connect_prompt_message">Someone with the Triangulation Device wants to connect to you!</string>
    
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="delete">Delete</string>
    
    <!-- About page -->
    <string name="about">About</string>
    <string name="app_description">Triangulation Device is an interactive sound artwork that generates improvised soundscapes between two people.\n\nVersion: 1.0</string>
    <string name="website">http://triangulationdevice.ca</string>
	<string name="rate_review">Rate and Review</string>
	<string name="how_to_use">How to Use</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="credits">Credits</string>
    <string-array name="about_sections">
	    <item>@string/website</item>
	    <item>@string/rate_review</item>
	    <item>@string/how_to_use</item>
	    <item>@string/credits</item>
    </string-array>
    
    <!-- Credits Page -->
    <string name="credits_text"><a href="http://jessicathompson.ca">Jessica Thompson</a> is an Assistant Professor in Hybrid Practice at the University of Waterloo. Her practice investigates spatial and social conditions within urban environments through interactive art-works situated at the intersection of sound, performance and mobile technologies.\n\n<a href="http://triangulationdevice.ca">Triangulation Device</a> was produced through the generous support of the Lois Claxton Humanities and Social Sciences Endowment Fund, <a href="https://uwaterloo.ca">University of Waterloo</a>\n\nResearch Assistants: Richard Lesco, Ram Sharma, and Chris Vandevelde (Systems Engineering), Jason Cho (Global Business and Digital Art)</string>
    
    <!-- How to Use -->
    <string name="how_to_use_text">Download the Triangulation Device onto your Android phone.\n\nTo create a soundscape with one user, open the project and press \'start\'. The device will begin generating a soundscape based on your location, movement and gesture.\n\nTo create a collaborative soundscape, press \'find other devices\' to link up with other users in your area. The soundscape will be generated between your locations, and can be modified by movement, gesture, or by sliding the scroll bar up and down.\n\nTo save your soundscapes, press \'stop\' and \'save\'.</string>
    
    <!-- Privacy Policy -->
    <string name="privacy_policy_text">You have no privacy.</string>
    
    <!-- Archive items -->
    <plurals name="n_sessions">
        <item quantity="zero">No Sessions</item>
        <item quantity="one" formatted="false">%d Session</item>
        <item quantity="other" formatted="false">%d Sessions</item>
    </plurals>
    <string name="session">Session</string>
    <string name="no_results">No Sessions</string>
    <string name="no_title">No Title</string>
    <string name="send_confirm_message">Do you want to send an anonymous copy of your sessions to our server, for research and analysis of how people use Triangulation Device? No identifiable information will be sent.</string>
    <string-array name="archive_session_menu">
        <item>@string/delete</item>
    </string-array>
    
    <!-- ActionBar menu -->
    <string name="archive">Archive</string>
    <string name="send_sessions">Send Sessions</string>
    <string name="settings">Settings</string>
    <string name="player">Player</string>
    
    <!-- Player -->
    <string name="player_longitude">LONGITUDE</string>
    <string name="player_latitude">LATITUDE</string>
    
    <string name="divider_description">REALLY, ANDROID?? REALLY?? YOU NEED A DESCRIPTION FOR A FUCKING DIVIDER??</string>

</resources>
