<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="28dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/my_device_grey_bg" >
    <LinearLayout android:id="@+id/my_device_title_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView android:id="@+id/my_device_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:textSize="10sp"
            android:drawableLeft="@drawable/ic_action_place"
            android:paddingRight="12dp"
            android:text="@string/my_device" />
    </LinearLayout>
    <ImageView android:id="@+id/my_device_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/divider_description"
        android:src="@color/divider_white" />
    <LinearLayout android:id="@+id/my_device_location_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal" >
        <LinearLayout android:id="@+id/my_device_longitude_wrapper"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="4dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
	        <TextView android:id="@+id/my_device_long_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="4dp"
	            android:gravity="center"
	            android:textColor="@color/text_white"
	            android:textSize="9sp"
	            android:textStyle="bold"
	            android:text="@string/longitude" />
	        <TextView android:id="@+id/my_device_long_value"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="11sp"
	            android:gravity="center_vertical|left"
	            android:textColor="@color/text_white" />
        </LinearLayout>
        <LinearLayout android:id="@+id/my_device_latitude_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:gravity="center"
            android:orientation="horizontal" >
	        <TextView android:id="@+id/my_device_lat_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="4dp"
	            android:gravity="center"
	            android:textColor="@color/text_white"
	            android:textSize="9sp"
	            android:textStyle="bold"
	            android:text="@string/latitude" />
	        <TextView android:id="@+id/my_device_lat_value"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="11sp"
	            android:gravity="center_vertical|left"
	            android:textColor="@color/text_white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>